# teth

./: LICENSE  README.md  pyproject.toml
src/teth/: __init__.py  _utils.py
